Add configs to gateway

--- a/Dockerfile-gateway
+++ b/Dockerfile-gateway
@@ -20,5 +20,6 @@ FROM alpine:latest
 WORKDIR /app
 
 COPY --from=builder /app/main /app/
+COPY --from=builder /app/config /app/config
 EXPOSE 8080
 
